--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="./assets/javascript/free-app.js"></script>
 
 
-    <title>Document</title>
+    <title>Free Web App</title>
 </head>
 
 <body>
