spelling errors corrected

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                 <br>
                 <br>
 
-                Technoloy plays a vital role for any growing business.
+                Technology plays a vital role for any growing business.
 
-                This summer, 2019, we will be giving away a free web application to a small to mid sized business!
+                This summer, 2019, we will be giving away a free web application to a small to mid-sized business!
                 <br>
                 <br>
                 All applications must be submitted by May 31, 2019.
