users did not know that they needed to scroll during applcation so working to make it more clear for mobile users

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 
         </div>
-        <div class="modal-footer btn">
+        <div class="btn">
             <button href="#!" id="submit-info" class="modal-close waves-effect waves-green btn-flat">Submit</button>
         </div>
     </div>
