added google analytics

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-140857040-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-140857040-1');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -135,22 +145,24 @@
     <div id="modal1" class="modal">
         <div class="modal-content">
             <h5>
-                Thank you for your submission! If your business is selected, someone will reach out to you by June 15, 2019.
+                Thank you for your submission! If your business is selected, someone will reach out to you by June 15,
+                2019.
             </h5>
         </div>
 
-    <!-- Modal Structure -->
-    <div id="modal2" class="modal">
-        <div class="modal-content">
+        <!-- Modal Structure -->
+        <div id="modal2" class="modal">
+            <div class="modal-content">
 
-            <h5>
-              Almost done but we're missing some required information. Double check to make sure all necessary fields have been completed.
-            </h5>
+                <h5>
+                    Almost done but we're missing some required information. Double check to make sure all necessary
+                    fields have been completed.
+                </h5>
 
 
 
+            </div>
         </div>
-    </div>
 
 
 
@@ -183,11 +195,11 @@
 
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="./assets/javascript/free-app.js"></script>
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <script src="./assets/javascript/free-app.js"></script>
 
 
 
