goal no longer required field

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div id="goal" class="input-field col s12" required>
+                        <div id="goal" class="input-field col s12">
                             <span class="helper-text" data-error="Required" data-success="Got it!"></span>
                             <label>What are you your goals for your web application/website?</label>
                             <select id="selection">
